AsyncHBase - User visible and noteworthy changes.
This project uses Semantic Versioning (see http://semver.org/).

* Version 1.4.0 (2012-??-??) [???????]

New public APIs:
  - Scanners can now scan multiple qualifiers at a time (#35).
  - Scanner and GetRequest now enable you to specify how many versions
    to read from HBase.

Noteworthy changes:
  - Fixed an RPC serialization bug when batching whole-row deletes.
    See issue #25.
  - The Deferred returned by `flush()' now guarantees that buffered
    atomic increments have also completed (#38).
  - Upgraded to Netty 3.5.9 to avoid an IndexOutOfBoundsException
    when deserializing a KeyValue with an empty qualifier or
    value, under certain circumstances (#40).
  - Fix increment coalescing to prevent overflowing Deferred callback
    chains when too many increments pile up for some counter (#40).
  - Increment coalescing now also supports negative values as well as
    large positive values (previously the limit was 65535).
  - Upgraded to suasync 1.3.1 and Netty 3.5.9.
  - Added a series of integration tests to help ongoing QA.


* Version 1.3.2 (2012-07-10) [2af9f55]

Noteworthy changes:
  - Upgraded to Netty 3.5.2.
  - KeyValue now allows a timestamp of 0.


* Version 1.3.1 (2012-06-16) [7ea151b]

  - Critical bug fix of issue #27 that makes some keys unusable
    given certain region boundaries, in rare circumstances.
  - `ensureTableFamilyExists' and `ensureTableExists' are cheaper
    as they partially work around HBASE-3170.


* Version 1.3.0 (2012-05-06) [bb9168c]

New public APIs:
  - PleaseThrottleException can now give you a Deferred.
  - There is now a `Counter' class that provides a highly concurrent
    replacement for AtomicLong from jsr166e's LongAdder.
  - HBaseClient now has a `bufferAtomicIncrement' method used to
    coalesce atomic counter increments.
  - A new method, `stats()', provides detailed statistics on the client's